Refactored to more OOP

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,18 @@ add_compile_options(-fsanitize=address)
 add_link_options(-fsanitize=address)
 set(CMAKE_CXX_FLAGS_INIT "-Werror -Wall -Wextra -Wpedantic -g")
 
-add_executable(ZPG main.cpp)
+add_executable(ZPG
+        main.cpp
+        shaders.cpp
+        shaders.h
+        application.h
+        application.cpp)
 
-find_package(glm REQUIRED)
-find_package(OpenGL REQUIRED)
-target_link_libraries(ZPG glm::glm)
-target_link_libraries(ZPG glfw)
-target_link_libraries(ZPG OpenGL::GL)
+find_package(glfw3 CONFIG REQUIRED)
+target_link_libraries(ZPG PRIVATE glfw)
+
+find_package(glm CONFIG REQUIRED)
+target_link_libraries(ZPG PRIVATE glm::glm)
+
+find_package(glew CONFIG REQUIRED)
+target_link_libraries(ZPG PRIVATE GLEW::GLEW)
