Fixed 3D objects rendering

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ add_executable(ZPG
         bushes.h
         skybox.cpp
         skybox.h
+        DrawObject.h
 )
 
 find_package(glfw3 CONFIG REQUIRED)
